--- a/src/libs/DITA-OT1.8.5/lib/org.dita.dost.platform/plugin.properties
+++ b/src/libs/DITA-OT1.8.5/lib/org.dita.dost.platform/plugin.properties
@@ -1,8 +1,8 @@
 #DITA-OT runtime configuration, do not edit manually
-#Tue Sep 02 21:07:21 EEST 2014
+#Fri Oct 16 02:09:16 AEST 2015
 supported_topic_extensions=.dita;.xml
 supported_resource_extensions=.pdf;.swf
-print_transtypes=legacypdf;pdf;pdf2;odt
+print_transtypes=legacypdf;pdf;pdf2;debrief;odt
 supported_image_extensions=.gif;.svg;.bmp;.jpg;.tif;.eps;.jpeg;.png;.tiff
 supported_map_extensions=.ditamap
 supported_html_extensions=.html;.htm
