--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="build1.xml"/>
+	<classpathentry kind="lib" path="build.xml"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
